alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -86,7 +86,7 @@
   }
 
   .w-auto{
-    width: auto;
+    width: 100%;
   }
 }
 
